--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,10 +1,10 @@
 @if (!showFull) {
   <mat-card>
-    <mat-card-header class="newHeadline">Release 2.1.0 (01.10.2024)</mat-card-header>
+    <mat-card-header class="newHeadline">Release 2.2.0 (03.10.2024)</mat-card-header>
     <mat-card-content>
-      <span
-        [innerHTML]="'news.release-2.1.0' | translate">
-      </span>
+        <span
+          [innerHTML]="'news.release-2.2.0' | translate">
+        </span>
     </mat-card-content>
   </mat-card>
 }
@@ -17,6 +17,17 @@
       <mat-icon class="icon" fontSet="material-symbols-rounded">brand_awareness</mat-icon>
       <h1>{{ "header.menu.news" | translate }}</h1>
     </div>
+
+    <mat-card>
+      <mat-card-header class="newHeadline">Release 2.2.0 (03.10.2024)</mat-card-header>
+      <mat-card-content>
+        <span
+          [innerHTML]="'news.release-2.2.0' | translate">
+        </span>
+      </mat-card-content>
+    </mat-card>
+
+    <p></p>
 
     <mat-card>
       <mat-card-header class="newHeadline">Release 2.1.0 (01.10.2024)</mat-card-header>
